# rust-os

./: .gitignore  Cargo.toml  README.md  x86_64_os.json
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
