[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort" # disable Stack unwinding on panic

[profile.release]
panic = "abort" # disable Stack unwinding on panic


[dependencies]
bootloader = "0.9.23"
volatile =  "0.2.6"

[dependencies.lazy_static] # for initializing lazy statics at runtime
version = "1.0"
features = ["spin_no_std"] # for unlinking std library
