[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort" # disable Stack unwinding on panic


[dependencies]
bootloader = "0.9.23"
volatile =  "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"

[dependencies.lazy_static] # for initializing lazy statics 
version = "1.0"
features = ["spin_no_std"] # for unlinking std library


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"] #using isa-debug-exit as a virtual device to the port address 0xf4 
# writing to isa-debug-exit will make qemu exit
test-success-exit-code = 33 #override default exit code to 33 (0x10 << 1 | 1 = 33)

